# my-cmake-template

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: compiler_warnings.cmake  generate_sources.sh  sources_and_headers.cmake  standard_settings.cmake  static_analyzers.cmake  utils.cmake
